# gomo

./: Cargo.toml  LICENSE  README.md  copy.bara.sky  flake.nix
.github/workflows/: gomo-private-sync.yml  linux-release.yml  nix.yml
src/: affected.rs  cache.rs  cli.rs  completion.rs  dependency_versions.rs  gleam_lock.rs  gleam_toml.rs  graph.rs  main.rs  runner.rs  test_support.rs  vcs.rs  workspace.rs
src/commands/: affected.rs  deps.rs  doctor.rs  explain.rs  graph.rs  init.rs  mod.rs  projects.rs  reset.rs  run.rs
src/commands/init/templates/: README.md  gitignore  gomo.toml
src/commands/init/templates/.github/workflows/: ci.yml
src/commands/init/templates/apps/web/: .gitignore  gleam.toml  manifest.toml
src/commands/init/templates/apps/web/assets/: styles.css
src/commands/init/templates/apps/web/src/: web.gleam
src/commands/init/templates/apps/web/src/web/: app.gleam
src/commands/init/templates/apps/web/test/: web_test.gleam
src/commands/init/templates/libs/shared/: gleam.toml  manifest.toml
src/commands/init/templates/libs/shared/src/shared/: api.gleam
src/commands/init/templates/libs/shared/test/: shared_test.gleam
src/commands/init/templates/services/api/: gleam.toml  manifest.toml
src/commands/init/templates/services/api/src/: api.gleam
src/commands/init/templates/services/api/src/api/: router.gleam
src/commands/init/templates/services/api/test/: api_test.gleam
src/ui/: graph.rs  mod.rs  projects.rs  run.rs  terminal.rs
